--- a/src/prototipogym/view/mantenimientos/ManClientes.form
+++ b/src/prototipogym/view/mantenimientos/ManClientes.form
@@ -494,11 +494,14 @@
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="2">
-                <StringItem index="0" value="Socio Activo"/>
-                <StringItem index="1" value="Invitado"/>
+                <StringItem index="0" value="Invitado"/>
+                <StringItem index="1" value="Socio Activo"/>
               </StringArray>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TipoClienteActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
