--- a/src/prototipogym/view/consultas/ConHorariosActividades.form
+++ b/src/prototipogym/view/consultas/ConHorariosActividades.form
@@ -65,7 +65,7 @@
                   <Component id="jLabel2" min="-2" pref="116" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                   <Component id="jTextField1" min="-2" pref="200" max="-2" attributes="0"/>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="comboDia" min="-2" max="-2" attributes="0"/>
